<resources>
    <string name="app_name">Course selection app</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="button">Register</string>
    <string name="textview">Course database 9000</string>
    <string name="register_prompt_email">Email</string>
    <string name="register_prompt_password">Password, make sure it\'s correct</string>
    <string name="confirm_pass">Confirm password</string>
    <string name="register_button">Register</string>
    <string name="register_home">Home</string>
    <string name="student_homepage">Student Homepage</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="completed_courses">Completed Courses</string>
    <string name="add_courses">Add Courses</string>
    <string name="home">Home</string>
    <string name="generate_timeline">Generate Timeline</string>
    <string name="timeline">Timeline</string>
    <string name="selectCourses">Select the course(s) you\'d like to take:</string>
    <string name="generate">Generate</string>
    <string name="restart">Restart</string>
    <string name="back">Back</string>
    <string name="registration">Registration</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="admin_homepage">Admin Homepage</string>
    <string name="Admin_query">Look for a course here</string>
    <string name="admin_logout">logout</string>
    <string name="type_to_search">Type to Search</string>
    <string name="string_item_name">Item Name</string>
    <string name="not_found">Not Found!</string>
    <string name="admin_add_title">Adding Course</string>
</resources>