<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#95DBE5FF"
    android:backgroundTint="@color/light_teal"
    tools:context=".Timeline">

    <TextView
        android:id="@+id/timelinetitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="cursive"
        android:text="@string/timeline"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleSubtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/selectCourses"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/back"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:backgroundTint="@color/grass_green"
        android:text="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeline"
        app:layout_constraintVertical_bias="0.203" />

    <Button
        android:id="@+id/gen"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grass_green"
        android:text="@string/generate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/restart"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toBottomOf="@+id/timeline"
        app:layout_constraintVertical_bias="0.203" />

    <Button
        android:id="@+id/restart"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:backgroundTint="@color/grass_green"
        android:text="@string/restart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeline"
        app:layout_constraintVertical_bias="0.203" />

    <ListView
        android:id="@+id/timeline"
        android:layout_width="381dp"
        android:layout_height="440dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleSubtext"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>